# tictactoe_repo

./: .gitignore  Dockerfile  pyproject.toml  pytest.ini
docker/: app.yaml  mongo_compose.yaml
src/: main.py
src/public/domain/entities/: base.py  board.py  cell.py  cell_position.py  dimension.py  game.py  game_result.py  player.py
src/public/domain/enums/: cell_value.py  dimension.py
src/public/domain/exceptions/: base.py  board.py  dimension.py
src/public/domain/interfaces/repositories/: game.py
src/public/domain/usecases/: base.py  check_win.py  create_game.py  game_start.py  game_usecases_builder.py  move.py  player_create.py
src/public/infrastructure/api/: base.py
src/public/infrastructure/api/fastapi_/: fastapi_.py
src/public/infrastructure/api/fastapi_/v1/dependencies/usecases/: game.py
src/public/infrastructure/api/fastapi_/v1/routers/: __init__.py  games.py  players.py
src/public/infrastructure/api/fastapi_/v1/routers/rooms/: room.py
src/public/infrastructure/api/fastapi_/v1/routers/schemas/: player.py
src/public/infrastructure/api/fastapi_/v1/routers/services/: games.py
src/public/infrastructure/api/static/: main.css  style.css
src/public/infrastructure/api/templates/: index.html  play_connect.html  player_create.html
src/public/infrastructure/repositories/convertors/: game.py
src/public/infrastructure/repositories/mongo/: base.py  game.py
src/settings/: __init__.py  config.py
src/tests/domain/entities/: test_board.py  test_game.py
src/tests/repositories/: game_conventor.py  test_game_repository.py
(+2 files in other folders)
