[project]
name = "tictactoe"
version = "0.1.0"
description = ""
authors = [
    {name = "nazim30781",email = "nazim30781@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest-asyncio (>=0.25.3,<0.26.0)",
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn[all] (>=0.34.0,<0.35.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "pymongo (>=4.11.1,<5.0.0)",
    "websockets (>=14.2,<15.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
